Header component fixed with alignment

--- a/angularUI/src/app/beforelogin/beforelogin.component.scss
+++ b/angularUI/src/app/beforelogin/beforelogin.component.scss
@@ -22,6 +22,13 @@
     z-index:9;
    overflow-x:hidden;
    flex: 1 1 auto;
+   background-image: url("../../assets/cool-background2.png");
+   margin: 1px;
+ }
+
+ .navbar-header
+ {
+    margin: 1px;
  }
  .txt-center {
     padding-left: 200px;
