--- a/angularUI/src/app/header/header.component.scss
+++ b/angularUI/src/app/header/header.component.scss
@@ -19,6 +19,12 @@
     z-index:9;
    overflow-x:hidden;
    flex: 1 1 auto;
+   margin: 1px;
+ }
+
+ .navbar-header
+ {
+    margin: 1px;
  }
  .txt-center {
     padding-left: 200px;
